# vibe_coding_orchestrator

./: .env.example  .gitignore  CLAUDE_PROJECT_PLANNER.md  ORCHESTRATOR_SETUP.md  README.md  STARTER_PROMPT.md  claude.md  data_model.md  implementation_rules.md  linkedin.md  pyproject.toml  repo_structure.md  rolling_handoff.md  task_plan.md
orchestrator/: .env.example  __init__.py  __main__.py  claude_handoff.py  codex_runner.py  config.py  logger.py  notion_client.py  ntfy_notifier.py  orchestrator.py  status_updater.py  task_reconciler.py  task_selector.py
orchestrator/handoffs/: C1-001-claude-handoff.md
workflow-analyzer/: .eslintrc.js  analysis_algorithms.md  architecture.md  claude.md  manifest.yml  package-lock.json  package.json  tsconfig.json  vision.md  webpack.config.js
workflow-analyzer/src/resolvers/: index.ts
workflow-analyzer/src/ui/: App.tsx  index.tsx  styles.css
workflow-analyzer/static/hello-world/: package-lock.json  package.json
